--- a/templates/excluir.html
+++ b/templates/excluir.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-        <title>excluido com sucesso</title>
+        <title>Sistema de gerenciar usuários - Excluido com sucesso</title>
     </head>
     <body>
         <div>
