--- a/templates/login_ok.html
+++ b/templates/login_ok.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-        <title>Login OK!</title>
+        <title>Sistema de gerenciar usuários - entrando...</title>
     </head>
     <body>
         <div>
