--- a/templates/adicionar_novo.html
+++ b/templates/adicionar_novo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Alterar</title>
+    <title>Sistema de gerenciar usuários - Adicionar novo</title>
   </head>
   <body>
     <p>{{ mensagem }}</p>
@@ -9,6 +9,7 @@
     <h2>Adicionar novo usuário</h2>
     <form action="/adicionar-novo-save" method="POST">
       <input type="text" id="name" name="name" placeholder="Nome" autocomplete="off" /><br><br>
+      <input type="text" id="email" name="email" placeholder="E-mail" autocomplete="off" /><br><br>
       <input type="text" id="login" name="login" placeholder="Login" autocomplete="off" /><br><br>
       <input type="password" id="pwd" name="password" placeholder="Senha" autocomplete="off" /><br><br>
       <button type="submit">Adicionar</button><br><br>
